# SyncEvolution

./: .cvsignore  .gitignore  AUTHORS  AUTOTOOLS-TESTING  AUTOTOOLS-TODO  COPYING  ChangeLog  Doxyfile  HACKING  INSTALL  INSTALL-tar-gz  Makefile-gen.am  Makefile.am  Makefile.in  NEWS  README  README.packagers  README.rst  SyncEvolution.plist.in  aclocal.m4  authors.xml  autogen.sh  autotroll.am  configure  configure-post.in  configure-pre.in  configure.ac  configure.in  dbus-timeout.patch  description  gen-autotools.sh  org.Moblin.SyncEvolution.service.in  setup-variables.am  svn2cl.sh
etc/: .cvsignore  Makefile.am  Makefile.in  source-config.txt  syncml-config.txt
src/: .cvsignore  .gitignore  AddressBookConstants.cpp  AddressBookSource.cpp  AddressBookSource.h  AddressBookSourceRegister.cpp  CmdlineSyncClient.cpp  CmdlineSyncClient.h  ConfigNode.h  ConfigTree.h  DBusSyncClient.cpp  DBusSyncClient.h  DeviceManagementNode.cpp  DeviceManagementNode.h  EvolutionCalendarSource.cpp  EvolutionCalendarSource.h  EvolutionCalendarSourceRegister.cpp  EvolutionClientConfig.h  EvolutionContactSource.cpp  EvolutionContactSource.h  EvolutionContactSourceRegister.cpp  EvolutionMemoSource.cpp  EvolutionMemoSource.h  EvolutionSmartPtr.h  EvolutionSyncClient.cpp  EvolutionSyncClient.h  EvolutionSyncSource.cpp  EvolutionSyncSource.h  FileConfigNode.cpp  FileConfigNode.h  FileConfigTree.cpp  FileConfigTree.h  FilterConfigNode.cpp  FilterConfigNode.h  Makefile-gen.am  Makefile.am  Makefile.am.gen  Makefile.in  NotificationBackendBase.h  NotificationBackendLibnotify.cpp  (+64 more)
src/core/: ConfigNode.h  ConfigTree.h  CurlTransportAgent.cpp  CurlTransportAgent.h  EvolutionSmartPtr.h  EvolutionSyncClient.cpp  EvolutionSyncClient.h  EvolutionSyncSource.cpp  EvolutionSyncSource.h  FileConfigNode.cpp  FileConfigNode.h  FileConfigTree.cpp  FileConfigTree.h  FilterConfigNode.cpp  FilterConfigNode.h  HashConfigNode.h  LogRedirect.cpp  LogRedirect.h  LogStdout.cpp  LogStdout.h  Logging.cpp  Logging.h  Makefile.am  PrefixConfigNode.cpp  PrefixConfigNode.h  SafeConfigNode.cpp  SafeConfigNode.h  SoupTransportAgent.cpp  SoupTransportAgent.h  SyncEvolutionCmdline.cpp  SyncEvolutionCmdline.h  SyncEvolutionConfig.cpp  SyncEvolutionConfig.h  SyncEvolutionUtil.cpp  SyncEvolutionUtil.h  SyncML.cpp  SyncML.h  SyncSource.cpp  SyncSource.h  SynthesisDBPlugin.cpp  (+10 more)
src/dbus/: .gitignore  Makefile.am  README  dbus.am  syncevo-dbus-types.c  syncevo-dbus-types.h  syncevo-dbus.c  syncevo-dbus.h  syncevo-server.c  syncevo-server.h  syncevo-session.c  syncevo-session.h  test.c
src/dbus-server/: Makefile.am  auto-sync-manager.cpp  auto-sync-manager.h  auto-term.h  bluez-manager.cpp  bluez-manager.h  client.cpp  client.h  cmdline-wrapper.h  common.h  connection.cpp  connection.h  connman-client.cpp  connman-client.h  dbus-sync.cpp  dbus-sync.h  dbus-transport-agent.h  dbus-user-interface.cpp  dbus-user-interface.h  exceptions.h  info-req.cpp  info-req.h  main.cpp  network-manager-client.cpp  network-manager-client.h  presence-status.cpp  presence-status.h  progress-data.cpp  progress-data.h  read-operations.cpp  read-operations.h  resource.h  restart.h  server.cpp  server.h  session-listener.h  session.cpp  session.h  source-progress.h  source-status.h  (+6 more)
src/default/: README
src/gdbus/: Makefile.am  README  debug.c  debug.h  gdbus-cxx-bridge.cpp  gdbus-cxx-bridge.h  gdbus-cxx.h  gdbus.am  gdbus.h  mainloop.c  object.c  watch.c
src/gdbusxx/: README  gdbus-cxx-bridge.cpp  gdbus-cxx-bridge.h  gdbus-cxx.h  gdbusxx.am
src/gnome-bluetooth/: Makefile.am  gnome-bluetooth.am  syncevolution.c
src/gtk-ui/: Makefile.am  README  gtk-ui.am  gtkinfobar.c  gtkinfobar.h  main.c  mux-bin.c  mux-frame.c  mux-frame.h  mux-icon-button.c  mux-icon-button.h  mux-window.c  mux-window.h  sync-config-widget-gtk.c  sync-config-widget-gtk.h  sync-config-widget-moblin.c  sync-config-widget-moblin.h  sync-config-widget.c  sync-config-widget.h  sync-gtk.desktop.in  sync-ui-config.c  sync-ui-config.h  sync-ui.c  sync-ui.h  sync-ui.rc  sync.desktop  sync.desktop.in  ui.glade  ui.xml
src/gtk3-ui/: README  gtk-ui.am  main.c  mux-frame.c  mux-frame.h  sync-config-widget.c  sync-gtk.desktop.in  sync-ui.c  sync-ui.css  sync-ui.h  sync.desktop.in  ui.xml
src/libical/: icalstrdup.c
src/syncevo/: .gitignore  Cmdline.cpp  Cmdline.cpp.orig  Cmdline.cpp.rej  Cmdline.h  CmdlineSyncClient.cpp  CmdlineSyncClient.h  ConfigFilter.cpp  ConfigFilter.h  ConfigNode.cpp  ConfigNode.h  ConfigTree.h  CurlTransportAgent.cpp  CurlTransportAgent.h  DBusTraits.h  DataBlob.h  DevNullConfigNode.h  EvolutionSmartPtr.h  EvolutionSyncClient.cpp  EvolutionSyncClient.h  FileConfigNode.cpp  FileConfigNode.h  FileConfigTree.cpp  FileConfigTree.h  FileDataBlob.cpp  FileDataBlob.h  FilterConfigNode.cpp  FilterConfigNode.h  ForkExec.cpp  ForkExec.h  GLibSupport.cpp  GLibSupport.h  HashConfigNode.h  IniConfigNode.cpp  IniConfigNode.h  LocalTransportAgent.cpp  LocalTransportAgent.h  LogRedirect.cpp  LogRedirect.h  LogStdout.cpp  (+66 more)
src/synthesis-includes/: Makefile.am
src/templates/: README  templates.am
src/vocl/: README  VConverter.cpp  VConverter.h  VObject.cpp  VObject.h  VProperty.cpp  posixadapter.h  vcardconverter.cpp
syncevo-dbus/: Makefile.am  README  syncevo-dbus-types.c  syncevo-dbus-types.h  syncevo-dbus.c  syncevo-dbus.h  test.c
test/: COPYING  ClientTest.cpp  ClientTest.h  ClientTestAssert.h  Makefile.am  README.Ovi  README.funambol  README.google  README.googlecalendar  README.memotoo  README.mobical  README.nokia_7210c  README.qtcontacts  README.scheduleworld  README.syncevolution-server  README.yahoo  README.zyb  abort-redirect.cpp  bluetooth-device-id-inspector.py  client-test-main.cpp  client-test.cpp  client.supp  compare.xsl  dbus-client-server.cpp  dbus-server-config.py  dbus-server-connect.py  dbus-server-http.py  dbus-server-sync.py  dbus-session.sh  evo.supp  generate-html.xsl  log2html.py  notification-daemon.py  proxy.py  resultchecker.py  run_src_client_test.sh  runtests.py  synccompare.pl  syncevo-http-server-logging.conf  syncevo-http-server.py  (+8 more)
(+540 files in other folders)
